bug/fix: fixed timestamp bug
